<resources>
    <string name="app_name">ShareHelper</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_content">This app does not collect any info about you and your usage.\nWhen you enable internet access, the app only uses it for fetching content from the URL, nothing will be collected.</string>
    <string name="basic_config">Basic Configuration</string>
    <string name="save_directory">Save directory</string>
    <string name="directory_not_set">Not set, tap to set so that the app can save files to internal storage</string>
    <string name="remove_params_from_url">Remove unwanted parameters from URL</string>
    <string name="summary_remove_params_from_url">Some URLs may contain parameters used to track sharing, enable this and configure the ones you want to remove to remove them when sharing</string>
    <string name="params_remove_list">URL parameters remove list</string>
    <string name="summary_params_remove_list">Configure parameters to be removed when sharing URLs</string>
    <string name="allow_internet">Allow internet access</string>
    <string name="summary_allow_internet">Show a button to fetch title from web content if there is no subject extra in the intent when sharing URLs</string>
    <string name="add">Add</string>
    <string name="params_remove_list_tip">Tap the plus button on action bar to add, long click on an item to remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_copy">Copy</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_append">Append to end</string>
    <string name="action_insert">Insert at top</string>
    <string name="action_add_to">Add to file…</string>
    <string name="unsupported_intent">The action in current intent is unsupported</string>
    <string name="copied_text">Copied %s to clipboard</string>
    <string name="save_directory_not_set">Save directory is not set. Please set it first to save files</string>
    <string name="error_opening_directory">Open save directory failed. Please try setting the directory again</string>
    <string name="create_file_failed">Create file failed</string>
    <string name="write_file_failed">Error occurred while writing file(s)</string>
    <string name="file_saved">File(s) saved</string>
    <string name="text_file_saved">Text file saved</string>
    <string name="share_with">Share with…</string>
    <string name="ask_for_text_file_name">Ask for text file name</string>
    <string name="summary_ask_for_text_file_name">Prompt user to enter a file name when saving text, leave blank to use generated time-based name</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="append_choose_dialog_title">Choose a file</string>
    <string name="open_selected_file_failed">Open selected file failed</string>
    <string name="content_appended">Content added to %s</string>
    <string name="error_log">Error log</string>
    <string name="summary_error_log">View log of the last error</string>
    <string name="no_error">No error</string>
    <string name="edit_content">Edit content</string>
    <string name="append_separator">Add content separator</string>
    <string name="summary_append_separator">Separator to be added before appending or inserting content, leave blank for the default (2 line breaks)</string>
    <string name="error_fetching_title">Error when fetching title</string>
    <string name="text_save_directory">Text save directory</string>
    <string name="summary_text_save_directory">Not set, set this to use a different directory for text files</string>
    <string name="text_processing_config">Text Processing</string>
    <string name="text_saving_config">Text Saving</string>
    <string name="open_source_components">Open source components</string>
    <string name="share_app">Share this app</string>
    <string name="share_app_summary">Share this app with your friends</string>
    <string name="source_code">Source code</string>
    <string name="source_code_summary">View source code on GitHub</string>
    <string name="link_handling">Link Handling</string>
    <string name="enable_browser_activity">Enable browser intent handling</string>
    <string name="summary_enable_browser_activity">Add ShareHelper to system browser list for quick link handling</string>
    <string name="default_browser">Default browser</string>
    <string name="summary_default_browser">Set the default browser to use when opening link from ShareHelper</string>
    <string name="no_available_browsers">No browsers available, please install one first</string>
    <string name="clear_default">Clear default</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="save_directory_unavailable_tip">Save directory is not set. Please set it to use storage related features.</string>
    <string name="action_fetch_title">Fetch title</string>
    <string name="fetch_title_automatically">Fetch title automatically</string>
    <string name="summary_fetch_title_automatically">Fetch title automatically, without tapping the button</string>
    <string name="share_option">Share option</string>
    <string name="always_ask">Always ask</string>
    <string name="merge_subject">All content as a whole</string>
    <string name="separate_subject">Separate subject (first line) and content</string>
    <string name="view_play_store">View on Play Store</string>
    <string name="summary_view_play_store">Rate, comment or send feedback on Play Store</string>
    <string name="file_count">%d files</string>
</resources>
